# IEEE-AI-Chatbot

./: .env.example  README.md  app.py  main.ipynb  main.py  pyproject.toml  requirements.txt
docs/: architecture.md  deployment_hf_spaces.md
scripts/: deploy_hf_space.sh
src/ieee_ai_chatbot/: __init__.py  chat.py  config.py  ingest.py  prompts.py  retrieval.py  ui_gradio.py  vectorstore.py
